--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
----
-layout: home
----
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="shortcut icon" type="image/png" href="assets/img/favicon.svg"/>
+
+    </head>
+    <body>
+        <div id='app'>
+         
+        </div>
+        <script type='text/javascript' src="/main.js"></script>
+    </body>
+</html>    
